@@ -1,3 +1,8 @@
+2011-02-15  Ken Werner  <ken.werner@de.ibm.com>
+
+	* opencl-lang.c (build_opencl_types): Set the size of the built-in
+	bool data type to a size of one byte.
+
 2011-02-15  Pedro Alves  <pedro@codesourcery.com>
 	    Jan Kratochvil  <jan.kratochvil@redhat.com>
 
